--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+OLD
+
 corelib is a small MVC framework based on PHP 5.3
 it is my first git hosted project and i currently rebuild the code base
 my goal is to advance my coding style and to create a cms based on corelib
